--- a/index.html
+++ b/index.html
@@ -14,20 +14,26 @@
         <span class="navbar-item">Page Title</span>
     </header>
     <main class="rpi-card">
-        <h1 class="rpi-page-title">Page Title</h1>
+        <div class="rpi-container">
+            <h1 class="rpi-page-title">Page Title</h1>
 
-        <div class="rpi-buttons">
-            <button class="rpi-button">Hello World!</button>
-            <button class="rpi-button">Hello World!</button>
-            <button class="rpi-button">Hello World!</button>
-        </div>
+            <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias doloribus ea quo non vero officiis
+                minus perferendis odit dolor iste laboriosam provident autem laborum, adipisci qui, veritatis nemo
+                asperiores ducimus veniam quisquam vel iure odio. Laboriosam in voluptas necessitatibus. Nulla.</div>
 
-        <form>
-            <div class="field">
-                <label class="rpi-label">Input Label</label>
-                <input type="text" class="rpi-input">
+            <div class="rpi-buttons">
+                <button class="rpi-button">Hello World!</button>
+                <button class="rpi-button">Hello World!</button>
+                <button class="rpi-button">Hello World!</button>
             </div>
-        </form>
+
+            <form>
+                <div class="field">
+                    <label class="rpi-label">Input Label</label>
+                    <input type="text" class="rpi-input">
+                </div>
+            </form>
+        </div>
     </main>
     <footer class="rpi-footer">
 
