--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
 
 <body>
     <header class="rpi-navbar">
-        <span class="navbar-item">Page Title</span>
+        <div class="navbar-brand">Page Title</div>
+        <a class="navbar-item" href="#">Home</a>
     </header>
     <main class="rpi-card">
         <div class="rpi-container">
             <h1 class="rpi-page-title">Page Title</h1>
 
-            <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias doloribus ea quo non vero officiis
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias doloribus ea quo non vero officiis
                 minus perferendis odit dolor iste laboriosam provident autem laborum, adipisci qui, veritatis nemo
-                asperiores ducimus veniam quisquam vel iure odio. Laboriosam in voluptas necessitatibus. Nulla.</div>
+                asperiores ducimus veniam quisquam vel iure odio. Laboriosam in voluptas necessitatibus. Nulla.</p>
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolorem nesciunt eos officiis
+                dolorum, perferendis repellat hic dolore dignissimos optio sed temporibus omnis. Dignissimos ipsa dicta,
+                aliquam similique blanditiis laborum officiis cupiditate commodi laudantium sit recusandae possimus
+                fugiat enim rem neque corrupti ab nobis quo repudiandae. Nihil laborum sint veritatis totam ipsa rerum
+                impedit unde tempore? Accusantium placeat eos sit unde animi sequi voluptates deleniti fugit assumenda,
+                in nulla eligendi distinctio vel vero mollitia ex laboriosam natus quasi! Veniam eveniet labore tempore
+                dicta a rerum mollitia harum nemo animi, quod deserunt architecto doloribus quos sint quis odio
+                distinctio magnam officia.</p>
 
             <div class="rpi-buttons">
                 <button class="rpi-button">Hello World!</button>
