Smaller navbar font size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <header class="rpi-navbar">
         <div class="navbar-brand">Page Title</div>
-        <a class="navbar-item" href="#">Home</a>
+        <a class="navbar-item" href="#">Page 1</a>
+        <a class="navbar-item" href="#">Page 2</a>
+        <a class="navbar-item" href="#">Page 3</a>
     </header>
     <main class="rpi-card">
         <div class="rpi-container">
@@ -34,7 +36,7 @@
             <div class="rpi-buttons">
                 <button class="rpi-button">Hello World!</button>
                 <button class="rpi-button">Hello World!</button>
-                <button class="rpi-button">Hello World!</button>
+                <button class="rpi-button red">Hello World!</button>
             </div>
 
             <form>
