Turn index into example page

--- a/index.html
+++ b/index.html
@@ -18,33 +18,52 @@
     </header>
     <main class="rpi-card">
         <div class="rpi-container">
-            <h1 class="rpi-page-title">Page Title</h1>
+            <h1 class="rpi-page-title">RPI CSS</h1>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias doloribus ea quo non vero officiis
-                minus perferendis odit dolor iste laboriosam provident autem laborum, adipisci qui, veritatis nemo
-                asperiores ducimus veniam quisquam vel iure odio. Laboriosam in voluptas necessitatibus. Nulla.</p>
+            <h2 class="rpi-page-subtitle">A tiny collection of classes based on RPI's officially stated theme.</h2>
 
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolorem nesciunt eos officiis
-                dolorum, perferendis repellat hic dolore dignissimos optio sed temporibus omnis. Dignissimos ipsa dicta,
-                aliquam similique blanditiis laborum officiis cupiditate commodi laudantium sit recusandae possimus
-                fugiat enim rem neque corrupti ab nobis quo repudiandae. Nihil laborum sint veritatis totam ipsa rerum
-                impedit unde tempore? Accusantium placeat eos sit unde animi sequi voluptates deleniti fugit assumenda,
-                in nulla eligendi distinctio vel vero mollitia ex laboriosam natus quasi! Veniam eveniet labore tempore
-                dicta a rerum mollitia harum nemo animi, quod deserunt architecto doloribus quos sint quis odio
-                distinctio magnam officia.</p>
-
-            <div class="rpi-buttons">
-                <button class="rpi-button">Hello World!</button>
-                <button class="rpi-button">Hello World!</button>
-                <button class="rpi-button red">Hello World!</button>
+            <div>
+                <h1 class="rpi-h1">Usage</h1>
+                <pre><samp>&lt;link rel=&quot;stylesheet&quot; href=&quot;https://apexal.github.io/rpi-css/rpi.css&quot;&gt;</samp></pre>
             </div>
 
-            <form>
-                <div class="field">
-                    <label class="rpi-label">Input Label</label>
-                    <input type="text" class="rpi-input">
+            <div>
+                <h2 class="rpi-h2">Paragraphs</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolorem nesciunt eos officiis
+                    dolorum, perferendis repellat hic dolore dignissimos optio sed temporibus omnis. Dignissimos ipsa
+                    dicta,
+                    aliquam similique blanditiis laborum officiis cupiditate commodi laudantium sit recusandae possimus
+                    fugiat enim rem neque corrupti ab nobis quo repudiandae. Nihil laborum sint veritatis totam ipsa
+                    rerum
+                    impedit unde tempore? Accusantium placeat eos sit unde animi sequi voluptates deleniti fugit
+                    assumenda,
+                    in nulla eligendi distinctio vel vero mollitia ex laboriosam natus quasi! Veniam eveniet labore
+                    tempore
+                    dicta a rerum mollitia harum nemo animi, quod deserunt architecto doloribus quos sint quis odio
+                    distinctio magnam officia.</p>
+            </div>
+
+
+            <div>
+                <h2 class="rpi-h2">Buttons</h2>
+
+                <div class="rpi-buttons">
+                    <button class="rpi-button">Hello World!</button>
+                    <button class="rpi-button">Hello World!</button>
+                    <button class="rpi-button red">Hello World!</button>
                 </div>
-            </form>
+            </div>
+
+
+            <div>
+                <h2 class="rpi-h2">Form Inputs</h2>
+                <form>
+                    <div class="field">
+                        <label class="rpi-label">Input Label</label>
+                        <input type="text" class="rpi-input">
+                    </div>
+                </form>
+            </div>
         </div>
     </main>
     <footer class="rpi-footer">
