--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
 <body>
     <header class="rpi-navbar">
-        <div class="navbar-brand">Page Title</div>
-        <a class="navbar-item" href="#">Page 1</a>
-        <a class="navbar-item" href="#">Page 2</a>
-        <a class="navbar-item" href="#">Page 3</a>
+        <div class="navbar-brand">RPI CSS</div>
+        <a class="navbar-item" href="/">Home</a>
+        <a class="navbar-item" href="/card.html">Card</a>
     </header>
-    <main class="rpi-card">
+    <main>
         <div class="rpi-container">
             <h1 class="rpi-page-title">RPI CSS</h1>
 
