Active navbar links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="rpi-navbar">
         <div class="navbar-brand">RPI CSS</div>
-        <a class="navbar-item" href="/">Home</a>
+        <a class="navbar-item is-active" href="/">Home</a>
         <a class="navbar-item" href="/card.html">Card</a>
     </header>
     <main>
