--- a/card.html
+++ b/card.html
@@ -13,11 +13,21 @@
     <header class="rpi-navbar">
         <div class="navbar-brand">RPI CSS</div>
         <a class="navbar-item" href="/">Home</a>
-        <a class="navbar-item" href="/card.html">Card</a>
+        <a class="navbar-item is-active" href="/card.html">Card</a>
     </header>
     <main class="rpi-card">
-        <h1 class="rpi-page-title smaller">Join Server</h1>
+        <h1 class="rpi-page-title smaller">Example Card</h1>
         <p>A card is useful for a really simple page or a prompt for the user.</p>
+
+        <div class="field">
+            <label class="rpi-label" for="input-1">Input 1</label>
+            <input class="rpi-input" value="" type="text" id="input-1" placeholder="A sample text input" maxlength="20"
+                required>
+
+            <label class="rpi-label" for="input-2">Input 2</label>
+            <input class="rpi-input" value="" type="text" id="input-2" placeholder="Another input" maxlength="20"
+                required>
+        </div>
 
         <ul class="rpi-arrow-nav">
             <li><a href="#" target="_blank">Link 1</a></li>
