Add danger and info alerts

--- a/card.html
+++ b/card.html
@@ -16,6 +16,8 @@
         <a class="navbar-item is-active" href="/card.html">Card</a>
     </header>
     <main class="rpi-card">
+        <div class="rpi-alert info">Hello hello!</div>
+
         <h1 class="rpi-page-title smaller">Example Card</h1>
         <p>A card is useful for a really simple page or a prompt for the user.</p>
 
