--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 <h2 class="rpi-h2">Buttons</h2>
 
                 <div class="rpi-buttons">
-                    <button class="rpi-button">Hello World!</button>
+                    <button class="rpi-button"><img class="icon"
+                            src="https://discord.com/assets/1c8a54f25d101bdc607cec7228247a9a.svg" width="30px"
+                            alt="Discord logo">Hello World!</button>
                     <button class="rpi-button">Hello World!</button>
                     <button class="rpi-button red">Hello World!</button>
                 </div>
@@ -58,8 +60,8 @@
                 <h2 class="rpi-h2">Form Inputs</h2>
                 <form>
                     <div class="field">
-                        <label class="rpi-label">Input Label</label>
-                        <input type="text" class="rpi-input">
+                        <label class="rpi-label" for="input">Input Label</label>
+                        <input type="text" class="rpi-input" id="input">
                     </div>
                 </form>
             </div>
