SCSS Variable Revamp - with new button variants

--- a/card.html
+++ b/card.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Card | RPI CSS</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='rpi.css'>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="rpi.css" />
+  </head>
 
-<body>
+  <body>
     <header class="rpi-navbar">
-        <div class="navbar-brand">RPI CSS</div>
-        <a class="navbar-item" href="/">Home</a>
-        <a class="navbar-item is-active" href="/card.html">Card</a>
+      <div class="navbar-brand">RPI CSS</div>
+      <a class="navbar-item" href="/">Home</a>
+      <a class="navbar-item is-active" href="/card.html">Card</a>
     </header>
     <main class="rpi-card">
-        <div class="rpi-alert info">Hello hello!</div>
+      <div class="rpi-alert info">Hello hello!</div>
 
-        <h1 class="rpi-page-title smaller">Example Card</h1>
-        <p>A card is useful for a really simple page or a prompt for the user.</p>
+      <h1 class="rpi-page-title smaller">Example Card</h1>
+      <p>A card is useful for a really simple page or a prompt for the user.</p>
 
-        <div class="field">
-            <label class="rpi-label" for="input-1">Input 1</label>
-            <input class="rpi-input" value="" type="text" id="input-1" placeholder="A sample text input" maxlength="20"
-                required>
+      <div class="field">
+        <label class="rpi-label" for="input-1">Input 1</label>
+        <input
+          class="rpi-input"
+          value=""
+          type="text"
+          id="input-1"
+          placeholder="A sample text input"
+          maxlength="20"
+          required
+        />
 
-            <label class="rpi-label" for="input-2">Input 2</label>
-            <input class="rpi-input" value="" type="text" id="input-2" placeholder="Another input" maxlength="20"
-                required>
-        </div>
+        <label class="rpi-label" for="input-2">Input 2</label>
+        <input
+          class="rpi-input"
+          value=""
+          type="text"
+          id="input-2"
+          placeholder="Another input"
+          maxlength="20"
+          required
+        />
+      </div>
 
-        <ul class="rpi-arrow-nav">
-            <li><a href="#" target="_blank">Link 1</a></li>
-            <li><a href="#" target="_blank">Link 2</a></li>
-            <li><a href="#" target="_blank">Link 3</a></li>
-        </ul>
+      <ul class="rpi-arrow-nav">
+        <li><a href="#" target="_blank">Link 1</a></li>
+        <li><a href="#" target="_blank">Link 2</a></li>
+        <li><a href="#" target="_blank">Link 3</a></li>
+      </ul>
     </main>
-</body>
-
+  </body>
 </html>
