--- a/index.html
+++ b/index.html
@@ -1,75 +1,83 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>RPI CSS</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='rpi.css'>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="rpi.css" />
+  </head>
 
-<body>
+  <body>
     <header class="rpi-navbar">
-        <div class="navbar-brand">RPI CSS</div>
-        <a class="navbar-item is-active" href="/">Home</a>
-        <a class="navbar-item" href="/card.html">Card</a>
+      <div class="navbar-brand">RPI CSS</div>
+      <a class="navbar-item is-active" href="/">Home</a>
+      <a class="navbar-item" href="/card.html">Card</a>
     </header>
     <main>
-        <div class="rpi-container">
-            <h1 class="rpi-page-title">RPI CSS</h1>
+      <div class="rpi-container">
+        <h1 class="rpi-page-title">RPI CSS</h1>
 
-            <h2 class="rpi-page-subtitle">A tiny collection of classes based on RPI's officially stated theme.</h2>
+        <h2 class="rpi-page-subtitle">
+          A tiny collection of classes based on RPI's officially stated theme.
+        </h2>
 
-            <div>
-                <h1 class="rpi-h1">Usage</h1>
-                <pre><samp>&lt;link rel=&quot;stylesheet&quot; href=&quot;https://apexal.github.io/rpi-css/rpi.css&quot;&gt;</samp></pre>
-            </div>
-
-            <div>
-                <h2 class="rpi-h2">Paragraphs</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolorem nesciunt eos officiis
-                    dolorum, perferendis repellat hic dolore dignissimos optio sed temporibus omnis. Dignissimos ipsa
-                    dicta,
-                    aliquam similique blanditiis laborum officiis cupiditate commodi laudantium sit recusandae possimus
-                    fugiat enim rem neque corrupti ab nobis quo repudiandae. Nihil laborum sint veritatis totam ipsa
-                    rerum
-                    impedit unde tempore? Accusantium placeat eos sit unde animi sequi voluptates deleniti fugit
-                    assumenda,
-                    in nulla eligendi distinctio vel vero mollitia ex laboriosam natus quasi! Veniam eveniet labore
-                    tempore
-                    dicta a rerum mollitia harum nemo animi, quod deserunt architecto doloribus quos sint quis odio
-                    distinctio magnam officia.</p>
-            </div>
-
-
-            <div>
-                <h2 class="rpi-h2">Buttons</h2>
-
-                <div class="rpi-buttons">
-                    <button class="rpi-button"><img class="icon"
-                            src="https://discord.com/assets/1c8a54f25d101bdc607cec7228247a9a.svg" width="30px"
-                            alt="Discord logo">Hello World!</button>
-                    <button class="rpi-button">Hello World!</button>
-                    <button class="rpi-button red">Hello World!</button>
-                </div>
-            </div>
-
-
-            <div>
-                <h2 class="rpi-h2">Form Inputs</h2>
-                <form>
-                    <div class="field">
-                        <label class="rpi-label" for="input">Input Label</label>
-                        <input type="text" class="rpi-input" id="input">
-                    </div>
-                </form>
-            </div>
+        <div>
+          <h1 class="rpi-h1">Usage</h1>
+          <pre><samp>&lt;link rel=&quot;stylesheet&quot; href=&quot;https://apexal.github.io/rpi-css/rpi.css&quot;&gt;</samp></pre>
         </div>
+
+        <div>
+          <h2 class="rpi-h2">Paragraphs</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates
+            dolorem nesciunt eos officiis dolorum, perferendis repellat hic
+            dolore dignissimos optio sed temporibus omnis. Dignissimos ipsa
+            dicta, aliquam similique blanditiis laborum officiis cupiditate
+            commodi laudantium sit recusandae possimus fugiat enim rem neque
+            corrupti ab nobis quo repudiandae. Nihil laborum sint veritatis
+            totam ipsa rerum impedit unde tempore? Accusantium placeat eos sit
+            unde animi sequi voluptates deleniti fugit assumenda, in nulla
+            eligendi distinctio vel vero mollitia ex laboriosam natus quasi!
+            Veniam eveniet labore tempore dicta a rerum mollitia harum nemo
+            animi, quod deserunt architecto doloribus quos sint quis odio
+            distinctio magnam officia.
+          </p>
+        </div>
+
+        <div>
+          <h2 class="rpi-h2">Buttons</h2>
+
+          <div class="rpi-buttons">
+            <button class="rpi-button">
+              <img
+                class="icon"
+                src="https://discord.com/assets/1c8a54f25d101bdc607cec7228247a9a.svg"
+                width="30px"
+                alt="Discord logo"
+              />Hello World!
+            </button>
+            <button class="rpi-button red">Hello World!</button>
+            <button class="rpi-button secondary">Hello World!</button>
+          </div>
+
+          <div class="rpi-buttons">
+            <button class="rpi-button red" disabled>Hello World!</button>
+            <button class="rpi-button" disabled>Hello World!</button>
+          </div>
+        </div>
+
+        <div>
+          <h2 class="rpi-h2">Form Inputs</h2>
+          <form>
+            <div class="field">
+              <label class="rpi-label" for="input">Input Label</label>
+              <input type="text" class="rpi-input" id="input" />
+            </div>
+          </form>
+        </div>
+      </div>
     </main>
-    <footer class="rpi-footer">
-
-    </footer>
-</body>
-
+    <footer class="rpi-footer"></footer>
+  </body>
 </html>
