--- a/card.html
+++ b/card.html
@@ -12,7 +12,7 @@
     <header class="rpi-navbar">
       <div class="navbar-brand">RPI CSS</div>
       <a class="navbar-item" href="/">Home</a>
-      <a class="navbar-item is-active" href="/card.html">Card</a>
+      <a class="navbar-item is-active" href="card.html">Card</a>
     </header>
     <main class="rpi-card">
       <div class="rpi-alert info">Hello hello! I'm an alert.</div>
